# chatbox

./: '  .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  pack-win-package.sh  warning.md
.github/workflows/: action.yml
chatbox/: Cargo.toml  build.rs
chatbox/src/: main.rs  qbox.rs  version.rs
chatbox/src/audio/: azure.rs  data.rs  mod.rs  play.rs  record.rs
chatbox/src/azureai/: bot.rs  data.rs  mod.rs
chatbox/src/config/: conf.rs  data.rs  mod.rs
chatbox/src/db/: archive.rs  data.rs  mod.rs  session.rs
chatbox/src/logic/: about.rs  archive.rs  base.rs  chat.rs  chatcache.rs  clipboard.rs  data.rs  instip.rs  message.rs  mod.rs  ok_cancel_dialog.rs  record.rs  session.rs  setting.rs  util.rs  window.rs
chatbox/src/openai/: bot.rs  data.rs  mod.rs
chatbox/src/util/: fs.rs  http.rs  mod.rs  translator.rs
chatbox/ui/: appwindow.slint  logic.slint  store.slint  theme.slint  translator.slint  util.slint
chatbox/ui/archive/: panel.slint
chatbox/ui/base/: avatar.slint  blink-circle.slint  brand.slint  btn-bak.slint  btn.slint  cdialog.slint  code-line-nunber.slint  data.slint  divider.slint  icon-btn.slint  label.slint  line-nunber.slint  living-circle.slint  logic.slint  md.slint  message.slint  no-data.slint  no-message.slint  tab-btn.slint  tip.slint
chatbox/ui/dialog/: about.slint  edit-archive.slint  help.slint  icons.slint  inst-tip.slint  new-archive.slint  ok-cancel.slint  screen.slint
chatbox/ui/dialog/new-session/: dialog.slint
chatbox/ui/dialog/session/: dialog.slint
chatbox/ui/dialog/setting/: chat.slint  dialog.slint  proxy.slint  ui.slint
chatbox/ui/dialog/setting/audio/: audio.slint  azure.slint  cache.slint  input-devices.slint  output-devices.slint
chatbox/ui/dialog/setting/chat/: azure.slint  chat.slint  openai.slint
chatbox/ui/leftPanel/: body.slint  bottom.slint  header.slint  panel.slint
chatbox/ui/rightPanel/: body.slint  footer.slint  header.slint  panel.slint
chatbox/ui/rightPanel/archive/: panel.slint
chatbox/ui/rightPanel/body/: bitem.slint  code-text.slint  panel.slint  right.slint  uitem.slint
profile/: cargo-timing.html
scripts/: azure-chatgpt.sh  chatbox.sh  chatgpt.sh  openai-image.sh  speech2text.sh  text2speech.sh
win/: version.h
win/lib/: sqlite3.lib
