[package]
name = "chatbox"
version = "0.1.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "ChatGPT client in Rust"
license = "MIT"
categories= ["ChatGPT", "Slint"]
keywords= ["ChatGPT", "Slint", "Rust"]


[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
lazy_static = "1.4"
regex = "1.5"
rusqlite = "0.27"
clipboard = "0.5"
slint = "1.0.0"
qmetaobject = "0.2"

uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = {version = "1.17", features = ["full"]}
tokio-stream = "0.1.12"

[build-dependencies]
slint-build = "1.0.0"
