[package]
name = "chatbox"
version = "1.3.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "ChatGPT client in Rust"
license = "MIT"
categories= ["ChatGPT", "Slint"]
keywords= ["ChatGPT", "Slint", "Rust"]


[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
lazy_static = "1.4"
regex = "1.5"
rusqlite = "0.27"
clipboard = "0.5"
anyhow = "1.0"
platform-dirs = "0.3"
rodio = "0.17"
bytes = "1.4.0"

slint = { version = "1.0.0", features = ["log"] }
uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream", "socks"] }
tokio = {version = "1.17", features = ["full"]}
tokio-stream = "0.1.12"

[build-dependencies]
slint-build = "1.0.0"
cmd_lib = "1.3"

